--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
   "dependencies": {
     "@sqltools/base-driver": "latest",
     "@sqltools/types": "latest",
+    "@sqltools/log": "latest",
+    "@sqltools/formatter": "latest",
+    "@mysql/xdevapi": "^8.0.20",
     "lodash": "^4.17.19",
     "mysql2": "^3.0.1",
-    "uuid": "^7.0.2"
+    "uuid": "^7.0.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.5.5",
