--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sqltools-driver-singlestore",
-  "displayName": "SQLTools SingleStore",
+  "displayName": "SingleStore",
   "description": "SQLTools Driver for SingleStore",
   "version": "0.0.1",
   "engines": {
@@ -35,20 +35,19 @@
   ],
   "main": "./out/extension.js",
   "dependencies": {
-    "@sqltools/base-driver": "latest",
-    "@sqltools/types": "latest",
-    "@sqltools/log": "latest",
-    "@sqltools/formatter": "latest",
     "@mysql/xdevapi": "^8.0.20",
+    "@sqltools/base-driver": "latest",
+    "@sqltools/formatter": "latest",
+    "@sqltools/log": "latest",
+    "@sqltools/types": "latest",
     "lodash": "^4.17.19",
-    "mysql2": "^3.0.1",
-    "uuid": "^7.0.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.5.5",
     "@types/node": "^14.0.9",
-    "@types/vscode": "^1.42.0",
-    "typescript": "^3.9.10"
+    "@types/vscode": "^1.72.0",
+    "typescript": "~4.8.3"
   }
 }
