--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./"
+    "watch": "tsc -watch -p ./",
+    "test:tsc": "tsc --noEmit -p ./tsconfig.json --skipLibCheck"
   },
   "keywords": [
     "driver-template",
@@ -46,8 +47,12 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.5.5",
+    "@types/jest": "^29.4.0",
     "@types/node": "^14.0.9",
     "@types/vscode": "^1.72.0",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "ts-jest": "^26.5.6",
     "typescript": "~4.8.3"
   }
 }
