--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "sqltools-driver-singlestore",
-  "displayName": "SingleStore",
+  "name": "sqltools-singlestore-driver",
+  "displayName": "SQLTools SingleStore Driver",
   "description": "SQLTools Driver for SingleStore",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.42.0"
   },
-  "publisher": "mtxr",
+  "publisher": "singlestore",
   "license": "MIT",
-  "repository": {},
-  "bugs": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/memsql/sqltools-singlestore-driver"
+  },
+  "bugs": "https://github.com/memsql/sqltools-singlestore-driver/issues",
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
@@ -17,9 +20,14 @@
     "test:tsc": "tsc --noEmit -p ./tsconfig.json --skipLibCheck"
   },
   "keywords": [
-    "driver-template",
-    "sqltools-driver"
+    "sqltools-driver",
+    "vs-code",
+    "singlestore",
+    "singlestoredb",
+    "memsql",
+    "sql"
   ],
+  "homepage": "https://github.com/memsql/sqltools-singlestore-driver#readme",
   "categories": [
     "Programming Languages",
     "Snippets",
@@ -36,10 +44,7 @@
   ],
   "main": "./out/extension.js",
   "dependencies": {
-    "@mysql/xdevapi": "^8.0.20",
     "@sqltools/base-driver": "latest",
-    "@sqltools/formatter": "latest",
-    "@sqltools/log": "latest",
     "@sqltools/types": "latest",
     "lodash": "^4.17.19",
     "mysql": "^2.18.1",
