--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "test:tsc": "tsc --noEmit -p ./tsconfig.json --skipLibCheck"
+    "test": "jest"
   },
   "keywords": [
     "sqltools-driver",
@@ -44,20 +44,18 @@
   ],
   "main": "./out/extension.js",
   "dependencies": {
-    "@sqltools/base-driver": "latest",
-    "@sqltools/types": "latest",
-    "lodash": "^4.17.19",
+    "@sqltools/base-driver": "^0.1.11",
+    "@sqltools/types": "^0.1.7",
+    "lodash": "^4.17.21",
     "mysql": "^2.18.1",
-    "uuid": "^7.0.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.5.5",
     "@types/jest": "^29.4.0",
-    "@types/node": "^14.0.9",
-    "@types/vscode": "^1.72.0",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
-    "ts-jest": "^26.5.6",
-    "typescript": "~4.8.3"
+    "@types/node": "^18.4.0",
+    "@types/vscode": "^1.75.1",
+    "jest": "^29.4.3",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5"
   }
 }
