--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "@sqltools/base-driver": "^0.1.11",
     "@sqltools/types": "^0.1.7",
     "lodash": "^4.17.21",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.3.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
